apt-proxy (1.9.23.pre24) unstable; urgency=low

  * Fix module import.

 -- Otavio Salvador <otavio@debian.org>  Fri,  3 Dec 2004 16:12:10 -0200

apt-proxy (1.9.23) unstable; urgency=low

  * Improve upgrade from previous database format. (Otavio)

 -- Otavio Salvador <otavio@debian.org>  Fri,  3 Dec 2004 15:48:25 -0200

apt-proxy (1.9.22) unstable; urgency=low

  * Load database when requested. Closes: #283685. (Otavio)
  * Remove previous database and recreate it because the format has
    change. Closes: #284011. (Otavio)

 -- Otavio Salvador <otavio@debian.org>  Fri,  3 Dec 2004 11:37:26 -0200

apt-proxy (1.9.21) unstable; urgency=low

  * Fix caching of files that was broken in 1.9.20, thanks
    to Paul Wagland for the help 
    (closes: #283441, #283893, #257611)
  * Create database file if it does not exist (closes: #283686)
  * Fix bug in gzip conversion class
  * Clean up memory after sending files from cache directory
    (closes: #260951, #258025)

 -- Chris Halls <halls@debian.org>  Thu,  2 Dec 2004 11:24:52 +0000

apt-proxy (1.9.20) unstable; urgency=low

  * Close temporary files when finish to transfer data.
    Closes: #281156 (Otavio)
  * Change to use bsddb3 database library bacause it's faster then python
    native version. Closes: #262097 (Otavio)
  * Files were being stored in memory while they were downloaded, 
    removed.  Reduces CPU usage while downloading large files.
    Closes: #271820 (Chris)
  * Simple profiling: Run 'aptest profile' to get a function call dump
    in ap-profile.log (Chris)
  * Change where we import the tempfile module to improve the
    speed. (Otavio)

 -- Otavio Salvador <otavio@debian.org>  Sun, 28 Nov 2004 20:32:34 -0200

apt-proxy (1.9.19) unstable; urgency=low

  * Fix format in apt-proxy.conf(5). (closes: #272153) (Otavio)
  * Add default to 30 in timeout parameter when importing from version
    1. (closes: #266776, #266567) (Otavio)
  * Allow listening on multiple IP addresses. (closes: #266453) (Otavio)