@@ -1,5 +1,1 @@
-doc/apt-proxy.8
-doc/apt-proxy.conf.5
-doc/apt-proxy-import.8
-doc/apt-proxy-v1tov2.8
-doc/apt-proxy.fr.8
+doc/*.[58]
